--- a/spring-api/pom.xml
+++ b/spring-api/pom.xml
@@ -16,4 +16,12 @@
         <module>spring-blog</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.dangdang</groupId>
+            <artifactId>spring-common</artifactId>
+            <version>3.0.0.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
