spring-admin api trace

--- a/spring-api/pom.xml
+++ b/spring-api/pom.xml
@@ -13,7 +13,7 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>spring-blog</module>
+        <module>spring-admin</module>
     </modules>
 
     <dependencies>
