--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
     </developers>
 
     <modules>
-            <module>spring-api</module>
-            <module>spring-job</module>
-            <module>spring-service</module>
-            <module>spring-storage</module>
-            <module>spring-web</module>
-            <module>spring-common</module>
+        <module>spring-api</module>
+        <module>spring-job</module>
+        <module>spring-service</module>
+        <module>spring-storage</module>
+        <module>spring-web</module>
+        <module>spring-common</module>
     </modules>
 
 
@@ -216,11 +216,12 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
                 <version>3.9</version>
-            </dependency><dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml-schemas</artifactId>
-            <version>3.9</version>
-        </dependency>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml-schemas</artifactId>
+                <version>3.9</version>
+            </dependency>
             <!-- xml -->
             <dependency>
                 <groupId>com.thoughtworks.xstream</groupId>
@@ -248,6 +249,22 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>2.6.1</version>
+            </dependency>
+            <!-- springboot v2 监控-->
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-server</artifactId>
+                <version>2.1.5</version>
+            </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <version>2.1.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>2.1.5.RELEASE</version>
             </dependency>
 
         </dependencies>
