--- a/spring-storage/spring-storage-sharding-sphere/pom.xml
+++ b/spring-storage/spring-storage-sharding-sphere/pom.xml
@@ -33,15 +33,23 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <!-- sharding-jdbc -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-jdbc-spring-namespace</artifactId>
         </dependency>
-        <!-- 分布式事务 -->
+        <!--
+            分布式事务
+                sharding 支持三种分布式事务，可以看官网的文档，每种都有相应的实例。
+            -->
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>sharding-transaction-xa-core</artifactId>
