feature elastic job

--- a/spring-job/pom.xml
+++ b/spring-job/pom.xml
@@ -13,7 +13,8 @@
     <packaging>pom</packaging>
 
     <modules>
-
+		<module>spring-elastic-jar</module>
+		<module>spring-elastic-tar</module>
     </modules>
 
 </project>
