--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,18 @@
                 <version>2.1.5.RELEASE</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>com.dangdang</groupId>
+                <artifactId>elastic-job-core</artifactId>
+                <version>2.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.kuhn-he</groupId>
+                <artifactId>elastic-job-lite-spring-boot-starter</artifactId>
+                <version>2.1.5</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
