--- a/spring-job/spring-job-xxl/pom.xml
+++ b/spring-job/spring-job-xxl/pom.xml
@@ -8,21 +8,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-elastic-jar</artifactId>
+    <artifactId>spring-job-xxl</artifactId>
 
     <dependencies>
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.1.0</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.github.kuhn-he</groupId>
-            <artifactId>elastic-job-lite-spring-boot-starter</artifactId>
-            <version>2.1.5</version>
-        </dependency>
-
     </dependencies>
 
     <!-- 多环境打包 start -->
@@ -78,16 +71,26 @@
         </resources>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.0.0</version>
                 <configuration>
-                    <mainClass></mainClass>
+                    <!-- 生成的tar.gz文件的名字,如果没有设置就默认用pom文件里的artifactId+version-->
+                    <finalName>${project.artifactId}</finalName>
+                    <!-- 属性控制是否在生成的打包文件的文件名中包含assembly id -->
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptors>
+                        <!--描述文件路径-->
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
+                    </descriptors>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>make-assembly</id>
+                        <!-- 绑定到package生命周期阶段上 -->
+                        <phase>package</phase>
                         <goals>
-                            <goal>repackage</goal>
+                            <goal>single</goal>
                         </goals>
                     </execution>
                 </executions>
